--- a/Challenge3_pm.ipynb
+++ b/Challenge3_pm.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "[8 rows x 22 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "freq     18112       14030    15964"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -664,12 +664,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Distributing Weight in Dataset\n",
-    "X2 = X\n",
+    "X2 = X.copy()\n",
     "\n",
     "X2['sex_weight'] = ''\n",
     "w = bdf1.query('attribute_name == \"SEX\" and attribute_value == \"female\"')['weight_adjustment'].values[0]\n",
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,53 +726,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Defining Hyperparameters\n",
     "params = {\n",
-    "    \"objective\": \"binary:logistic\",\n",
+    "    'Objective': 'reg:tweedie',\n",
     "    # 'max_depth': 4,\n",
-    "    'learning_rate': 0.1\n",
-    "    # \"num_class\": 2\n",
+    "    'learning_rate': 0.1,\n",
+    "    \"num_class\": 2\n",
     "    # \"tree_method\": \"gpu_hist\"\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Defining and Training Model\n",
     "n = 100\n",
-    "model = xgb.train(\n",
+    "model2 = xgb.train(\n",
     "    params=params,\n",
-    "    dtrain=dtrain_reg,\n",
-    "    num_boost_round=n,\n",
+    "    dtrain=dtrain_reg2,\n",
+    "    num_boost_round=n\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.796\n",
-      "0.4506283662477558\n",
-      "RMSE of the base model: 0.393\n"
+      "0.7928333333333333\n",
+      "0.44484144707458695\n",
+      "RMSE of the base model: 0.455\n"
      ]
     }
    ],
    "source": [
     "# RMSE Validation\n",
-    "preds = model.predict(dtest_reg2)\n",
+    "preds = model2.predict(dtest_reg2)\n",
     "rmse = mean_squared_error(y_test2, preds, squared=False)\n",
     "\n",
     "preds_xgb = np.where(preds < 0.5, 0, 1)\n",
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -833,21 +833,39 @@
     "    'EDUCATION': 'unknown',\n",
     "}\n",
     "\n",
-    "bdf1 = b.get_disparity_predefined_groups(xtab, original_df=df_out_group, ref_groups_dict=ref_groups_dict)\n",
+    "bdf2 = b.get_disparity_predefined_groups(xtab, original_df=df_out_group, ref_groups_dict=ref_groups_dict)\n",
     "\n",
     "# Calculate Disparate Impact (DI) manually and create a custom column\n",
-    "bdf1['disparity_index'] = 1 - abs(bdf1['fpr'] - 1)\n",
-    "bdf1['weight_adjustment'] = 1 - bdf1['disparity_index']\n",
+    "bdf2['disparity_index'] = 1 - abs(bdf1['fpr'] - 1)\n",
+    "bdf2['weight_adjustment'] = 1 - bdf1['disparity_index']\n",
     "\n",
     "# Define the sensitive attribute categories\n",
     "# Calculate the aggregate Normalized DI (simple average)\n",
-    "aggregate_normalized_di2 = bdf1['disparity_index'].sum() / len(bdf1['disparity_index'])\n",
+    "aggregate_normalized_di2 = bdf2['disparity_index'].sum() / len(bdf1['disparity_index'])\n",
     "\n",
     "# Print the aggregate Normalized DI\n",
     "\n",
     "print(f'Aggregate Normalized DI: {aggregate_normalized_di:.2f}')\n",
     "print(f'Aggregate Normalized DI: {aggregate_normalized_di2:.2f}')\n",
     "print(aggregate_normalized_di / aggregate_normalized_di2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_final = df_prediction.drop('default-payment-next-month', axis=1)\n",
+    "dfinal_reg = xgb.DMatrix(X_final, enable_categorical=True)\n",
+    "final = model2.predict(dfinal_reg)\n",
+    "\n",
+    "final = np.where(final < 0.5, 0, 1)\n",
+    "final = pd.DataFrame(final)\n",
+    "\n",
+    "\n",
+    "\n",
+    "final.to_csv('./Data/final.csv')"
    ]
   }
  ],
